successfully update the content of a Library resource